--- a/src/WCNet/VP.CodingChallenge.WCNet.csproj
+++ b/src/WCNet/VP.CodingChallenge.WCNet.csproj
@@ -12,6 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="Files\test.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
