--- a/src/WCNet/VP.CodingChallenge.WCNet.csproj
+++ b/src/WCNet/VP.CodingChallenge.WCNet.csproj
@@ -26,4 +26,12 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <EditorConfigFiles Remove="C:\source\vp-coding-challenge-wcnet\src\WCNet\.editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="C:\source\vp-coding-challenge-wcnet\src\WCNet\.editorconfig" />
+  </ItemGroup>
+
 </Project>
