added command handler base

--- a/src/WCNet/VP.CodingChallenge.WCNet.csproj
+++ b/src/WCNet/VP.CodingChallenge.WCNet.csproj
@@ -21,6 +21,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Files\test.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
