--- a/src/WCNet/appsettings.json
+++ b/src/WCNet/appsettings.json
@@ -7,7 +7,7 @@
   },
   "ParserOptions": {
     "Directory": ".\\Files",
-    "AllowedFileExtension": "txt",
+    "AllowedFileExtension": ".txt",
     "CommandExpression": "^(-[cl])",
     "FilenameExpression": "[\\w\\-.]+\\.[\\w]+$"
   }
