added integration tests

--- a/test/WCNet/VP.CodingChallenge.WCNet.Test.csproj
+++ b/test/WCNet/VP.CodingChallenge.WCNet.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -32,6 +32,12 @@
 
   <ItemGroup>
     <None Include="C:\source\vp-coding-challenge-wcnet\test\WCNet\.editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
