--- a/src/WCNet/appsettings.json
+++ b/src/WCNet/appsettings.json
@@ -8,7 +8,7 @@
   "ParserOptions": {
     "Directory": ".\\Files",
     "AllowedFileExtension": ".txt",
-    "CommandExpression": "^(-[clw])",
+    "CommandExpression": "^(-[clwm])",
     "FilenameExpression": "[\\w\\-.]+\\.[\\w]+$"
   }
 }
