handle default commands

--- a/src/WCNet/appsettings.json
+++ b/src/WCNet/appsettings.json
@@ -6,9 +6,9 @@
     }
   },
   "ParserOptions": {
-    "Directory": ".\\Files",
     "AllowedFileExtension": ".txt",
     "CommandExpression": "^(-[clwm])",
-    "FilenameExpression": "[\\w\\-.]+\\.[\\w]+$"
+    "DefaultCommandsRaw": ["l", "w", "c"],
+    "Directory": ".\\Files"
   }
 }
