--- a/src/WCNet/Properties/launchSettings.json
+++ b/src/WCNet/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "VP.CodingChallenge.WCNet": {
       "commandName": "Project",
-      "commandLineArgs": "-c test.txt"
+      "commandLineArgs": "test.txt"
     }
   }
 }
