added custom exception and errors

--- a/src/WCNet/appsettings.json
+++ b/src/WCNet/appsettings.json
@@ -7,8 +7,8 @@
   },
   "ParserOptions": {
     "AllowedFileExtension": ".txt",
-    "CommandExpression": "^(-[clwm])",
-    "DefaultCommandsRaw": ["l", "w", "c"],
+    "AllowedCommandPattern": "^(-[clwm])",
+    "DefaultCommandsRaw": [ "l", "w", "c" ],
     "Directory": ".\\Files"
   }
 }
