Refactor to async command handling and update .gitignore
Updated .gitignore to ignore test results and benchmark binaries.
Refactored command handling to use asynchronous operations:
- Modified CountCommandFactory and ICommandFactory for async.
- Introduced AsyncCommandHandlerBase and new async handlers.
- Added AsyncCommandInvoker and IAsyncCommandInvoker.
- Updated CommandInvoker and related interfaces for async.
- Updated Document class to use PipeReader for file reading.
- Refactored various command classes to implement IAsyncCommand.
- Updated Program class for async Main method.
- Registered async handlers in WCNetServiceExtension.
- Updated Usings.cs for async namespaces.
- Updated project file to include System.IO.Pipelines.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 /test/WCNet/obj
 /test/WCNet/coveragereport
 /test/WCNet/TestResults
+/test/VP.CodingChallenge.WCNet.Benchmark/bin
+/test/VP.CodingChallenge.WCNet.Benchmark/obj
