--- a/src/WCNet/appsettings.json
+++ b/src/WCNet/appsettings.json
@@ -5,7 +5,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ParserOptions": {
+  "ParseOptions": {
     "AllowedFileExtension": ".txt",
     "AllowedCommandPattern": "^(-[clwm])",
     "DefaultCommandsRaw": [ "l", "w", "c" ],
