--- a/test/WCNet/VP.CodingChallenge.WCNet.Test.csproj
+++ b/test/WCNet/VP.CodingChallenge.WCNet.Test.csproj
@@ -44,6 +44,9 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="test.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
